more instructions + test improvements